--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -33,6 +33,11 @@
     "dice": {
         "question": "二人以上の単語を入力してください! 🎲"
     },
+    "dont_click": [
+        "ストップ押してください！",
+        "大変！",
+        "働いています！"
+    ],
     "enko": {
         "onlyText": "Textだけを支援します!",
         "question": "変換する文字を入力してください!"
@@ -56,7 +61,8 @@
     },
     "image": {
         "error": "あっ!イメージを見つけられません!",
-        "question": "イメージ検索語を入力してください!"
+        "question": "イメージ検索語を入力してください!",
+        "sent": "\"%s\" 送信した！"
     },
     "koen": {
         "errorInput": "初声+中性または初声+中性+終声のハングルだけ入れてください!",
