--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -33,15 +33,20 @@
     "dice": {
         "question": "둘 이상의 단어를 입력해주세요! 🎲"
     },
+    "dont_click": [
+        "그만 눌러주세요!",
+        "힘들어요!",
+        "일하고 있어요!"
+    ],
     "enko": {
         "onlyText": "Text만 지원해요!",
         "question": "변환할 문자를 입력해주세요!"
     },
     "error": "무엥",
     "get": {
-        "bring": "번 메시지 가져왔어요!",
+        "bring": "\"%s\"번 메시지 가져왔어요!",
         "error": "숫자가 아니거나 ID 범위를 초과했어요!",
-        "notFound": "번 메시지를 찾을 수 없어요!",
+        "notFound": "\"%s\"번 메시지를 찾을 수 없어요!",
         "question": "메시지 ID를 입력해주세요!"
     },
     "google": {
@@ -56,7 +61,8 @@
     },
     "image": {
         "error": "앗! 이미지를 찾을 수 없어요!",
-        "question": "이미지 검색어를 입력해주세요!"
+        "question": "이미지 검색어를 입력해주세요!",
+        "sent": "\"%s\" 보냈어!"
     },
     "koen": {
         "errorInput": "초성+중성 또는 초성+중성+종성의 한글만 넣어주세요!",
